--- a/src/components/NeedsPanel/NeedsGrid/Need/NeedBar/style.scss
+++ b/src/components/NeedsPanel/NeedsGrid/Need/NeedBar/style.scss
@@ -14,6 +14,10 @@
   cursor: pointer;
 }
 
+.need-bar__bar:hover {
+  box-shadow: 4px 4px 7px rgba(0,0,0,0.4);
+}
+
 .need-bar__border {
   position: absolute;
   top: -1px;
