--- a/src/components/NeedsPanel/style.scss
+++ b/src/components/NeedsPanel/style.scss
@@ -22,7 +22,7 @@
 .needs-panel__mood-gauge-container {
   position: absolute;
   top: 13px;
-  padding: 0px 85px;
+  padding: 0px 84px;
   z-index: -1;
 }
 
